--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 node_modules
+
+/actions/*/dist/*
+!/actions/*/dist/index.js
+!/actions/*/dist/index.js.map
+!/actions/*/dist/license.txt
+!/actions/*/dist/sourcemap-register.js
