--- a/actions/generate-matrix/package.json
+++ b/actions/generate-matrix/package.json
@@ -1,10 +1,27 @@
 {
-  "name": "@mob/generate-matrix",
+  "name": "@mobb/generate-build-params",
+  "scripts": {
+    "build": "npx tsc",
+    "ci-test": "npx jest",
+    "format": "npx prettier --write .",
+    "package": "npx ncc build src/index.ts -o dist --source-map --license licenses.txt",
+    "test": "npx jest",
+    "all": "npm run format && npm run test && npm run package"
+  },
   "dependencies": {
-    "@actions/core": "1.10.1"
+    "@actions/core": "1.10.1",
+    "@actions/exec": "1.1.1",
+    "@actions/github": "6.0.0",
+    "glob": "11.0.0",
+    "js-yaml": "4.1.0",
+    "luxon": "3.5.0",
+    "minimatch": "10.0.1",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@types/jest": "29.5.13",
+    "@types/js-yaml": "4.0.9",
+    "@types/luxon": "3.4.2",
     "@types/node": "22.5.5",
     "@vercel/ncc": "0.38.1",
     "jest": "29.7.0",
