Test only when TypeScript files are changed

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,9 +2,15 @@ name: test
 
 on:
   pull_request:
+    paths:
+      - 'actions/**/*.ts'
+      - 'packages/**/*.ts'
   push:
     branches:
       - main
+    paths:
+      - 'actions/**/*.ts'
+      - 'packages/**/*.ts'
 
 jobs:
   test:
