Run test when workflow file is updated

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,12 +3,14 @@ name: test
 on:
   pull_request:
     paths:
+      - '.github/workflows/test.yaml'
       - 'actions/**/*.ts'
       - 'packages/**/*.ts'
   push:
     branches:
       - main
     paths:
+      - '.github/workflows/test.yaml'
       - 'actions/**/*.ts'
       - 'packages/**/*.ts'
 
