--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,12 +3,14 @@ name: test
 on:
   pull_request:
     paths:
+      - '.github/workflows/test.yaml'
       - 'actions/**/*.ts'
       - 'packages/**/*.ts'
   push:
     branches:
       - main
     paths:
+      - '.github/workflows/test.yaml'
       - 'actions/**/*.ts'
       - 'packages/**/*.ts'
 
@@ -18,9 +20,9 @@ jobs:
     permissions:
       contents: read
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python 3.8
-        uses: actions/setup-node@v4.0.3
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Set up Node.js
+        uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4.0.3
         with:
           node-version-file: .nvmrc
           cache: npm
