--- a/actions/generate-build-docker-params/fixtures/apps/modjo-global.yaml
+++ b/actions/generate-build-docker-params/fixtures/apps/modjo-global.yaml
@@ -3,15 +3,15 @@ build:
     identities:
       stg-pr:
         aws:
-          iam-role: arn:aws:iam::615299752259:role/mobb-builder-pr
+          iam-role: arn:aws:iam::615299752259:role/modjo-builder-pr
           region: ap-northeast-1
       stg-main:
         aws:
-          iam-role: arn:aws:iam::615299752259:role/mobb-builder-main
+          iam-role: arn:aws:iam::615299752259:role/modjo-builder-main
           region: ap-northeast-1
       prd:
         aws:
-          iam-role: arn:aws:iam::920373013500:role/mobb-builder
+          iam-role: arn:aws:iam::920373013500:role/modjo-builder
           region: ap-northeast-1
 
     registries:
@@ -19,14 +19,14 @@ build:
         aws:
           identity: stg-pr
           region: ap-northeast-1
-          repository-base: 615299752259.dkr.ecr.ap-northeast-1.amazonaws.com/mobb-pr
+          repository-base: 615299752259.dkr.ecr.ap-northeast-1.amazonaws.com/modjo-pr
       stg-main:
         aws:
           identity: stg-main
           region: ap-northeast-1
-          repository-base: 615299752259.dkr.ecr.ap-northeast-1.amazonaws.com/mobb
+          repository-base: 615299752259.dkr.ecr.ap-northeast-1.amazonaws.com/modjo
       prd:
         aws:
           identity: prd
           region: ap-northeast-1
-          repository-base: 920373013500.dkr.ecr.ap-northeast-1.amazonaws.com/mobb
+          repository-base: 920373013500.dkr.ecr.ap-northeast-1.amazonaws.com/modjo
